--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/skwongman/JProgrammer#readme",
   "devDependencies": {
     "aws-sdk": "^2.1292.0",
+    "bootstrap": "^5.3.0-alpha1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
