--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-brute": "^1.0.1",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
     "multer": "^1.4.5-lts.1",
