--- a/package.json
+++ b/package.json
@@ -21,17 +21,15 @@
   "devDependencies": {
     "aws-sdk": "^2.1292.0",
     "bootstrap": "^5.3.0-alpha1",
-    "color-diff": "^1.2.0",
-    "color-thief-node": "^1.0.4",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-brute": "^1.0.1",
+    "fast-average-color-node": "^2.6.0",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.20",
-    "request": "^2.88.2"
+    "nodemon": "^2.0.20"
   }
 }
