--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
   "homepage": "https://github.com/skwongman/JProgrammer#readme",
   "devDependencies": {
     "aws-sdk": "^2.1292.0",
+    "bcrypt": "^5.1.0",
     "bootstrap": "^5.3.0-alpha1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-brute": "^1.0.1",
     "fast-average-color-node": "^2.6.0",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
     "multer": "^1.4.5-lts.1",
