--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^6.8.3",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "request": "^2.88.2"
   }
 }
