--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "homepage": "https://github.com/skwongman/JProgrammer#readme",
   "devDependencies": {
     "aws-sdk": "^2.1292.0",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.0-alpha1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
