--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "torrent-stream": "^1.2.1"
   }
 }
