--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
     "request": "^2.88.2",
+    "socket.io": "^4.6.0",
     "torrent-stream": "^1.2.1"
   }
 }
