--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.18.2",
     "express-brute": "^1.0.1",
     "fast-average-color-node": "^2.6.0",
+    "ioredis": "^5.3.1",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
