Update: tidy up ejs files and library links

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "devDependencies": {
     "aws-sdk": "^2.1292.0",
     "bcryptjs": "^2.4.3",
-    "bootstrap": "^5.3.0-alpha1",
+    "bootstrap": "^5.0.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
