--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "jprogrammer",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon app.js",
     "start": "node app.js"
   },
   "repository": {
